Cambio de ctaegorias y colores, boton seleccionar no funciona

--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
 <body>
     <header>
         <nav class="category_list">
-            <a href="#" class="categoryItem" category="all">Todos</a>
-            <a href="#" class="categoryItem" category="eco">Ambientales</a>
-            <a href="#" class="categoryItem" category="art">Artisticos</a>
-            <a href="#" class="categoryItem" category="tech">Ciencia y tecnologia</a>
-            <a href="#" class="categoryItem" category="teach">Educación</a>
-            <a href="#" class="categoryItem" category="LGBTQ">LGBTQ+</a>
+            <a href="#" class="categoryItem" category="all" id="catAll">Todos</a>
+            <a href="#" class="categoryItem" category="art" id="catArt">Cultura y arte</a>
+            <a href="#" class="categoryItem" category="emprende" id="catEmprende">Empredimiento</a>
+            <a href="#" class="categoryItem" category="social" id="catSocial">Compromiso social</a>
+            <a href="#" class="categoryItem" category="tech" id="catTech">Ciencia y tecnologia</a>
+            <a href="#" class="categoryItem" category="eco" id="catEco">Medio ambiente</a>    
         </nav>
     </header>
    <section class="wrap">
         <h1>Conoce a los colectivos</h1>
         <div class="store-wrapper">
             <section class="products_list">
-                <div class="product-item" category="teach">
-                    <img src="images/avilivImg.png" alt="">
-                    <a href="#">Aviliv</a>
+                <div class="product-item" category="social">
+                    <img src="images/avilivImg.png" alt="Aviliv">
+                    <a href="https://www.facebook.com/ColectivoAVILIV">Aviliv</a>
                 </div>
-                <div class="product-item" category="teach">
-                    <img src="images/diplomaciaImg.png" alt="">
-                    <a href="#">DiplomaciaGTO</a>
+                <div class="product-item" category="social">
+                    <img src="images/diplomaciaImg.png" alt="diplomaciaImg">
+                    <a href="https://www.facebook.com/DiplomaciaGTO">DiplomaciaGTO</a>
                 </div>
                 <div class="product-item" category="eco">
-                    <img src="images/ecoliderImg.png" alt="">
-                    <a href="#">Ecolider</a>
+                    <img src="images/ecoliderImg.png" alt="ecoliderImg">
+                    <a href="https://ecolidergto.org/">Ecolider</a>
                 </div>
                 <div class="product-item" category="tech">
-                    <img src="images/particlezImg.png" alt="">
-                    <a href="#">Particlez</a>
+                    <img src="images/particlezImg.png" alt="particlezImg">
+                    <a href="https://www.facebook.com/particlezmx">Particlez</a>
                 </div>
-                <div class="product-item" category="LGBTQ">
-                    <img src="images/queerImg.png" alt="">
-                    <a href="#">Casa Queer</a>
+                <div class="product-item" category="social">
+                    <img src="images/queerImg.png" alt="queerImg">
+                    <a href="https://www.facebook.com/casaqueer">Casa Queer</a>
                 </div>
                 <div class="product-item" category="tech">
-                    <img src="images/techImg.png" alt="">
-                    <a href="#">Tech4GTO</a>
+                    <img src="images/techImg.png" alt="tech4GtoImg">
+                    <a href="https://www.facebook.com/tech4gto">Tech4GTO</a>
                 </div>
             </section>
         </div>
