--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@600&display=swap" rel="stylesheet">
     <title>Colectivos</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="js/jquery-3.6.0.min.js"></script>
@@ -12,12 +15,12 @@
 <body>
     <header>
         <nav class="category_list">
-            <a href="#" class="categoryItem" category="all" id="catAll">Todos</a>
-            <a href="#" class="categoryItem" category="art" id="catArt">Cultura y arte</a>
-            <a href="#" class="categoryItem" category="emprende" id="catEmprende">Empredimiento</a>
-            <a href="#" class="categoryItem" category="social" id="catSocial">Compromiso social</a>
-            <a href="#" class="categoryItem" category="tech" id="catTech">Ciencia y tecnologia</a>
-            <a href="#" class="categoryItem" category="eco" id="catEco">Medio ambiente</a>    
+            <a href="#" class="categoryItem catAll" category="all">Todos</a>
+            <a href="#" class="categoryItem catArt" category="art" >Cultura y arte</a>
+            <a href="#" class="categoryItem catEmprende" category="emprende" >Empredimiento</a>
+            <a href="#" class="categoryItem catSocial" category="social" >Compromiso social</a>
+            <a href="#" class="categoryItem catTech" category="tech" >Ciencia y tecnologia</a>
+            <a href="#" class="categoryItem catEco" category="eco" >Medio ambiente</a>    
         </nav>
     </header>
    <section class="wrap">
