Cambio en el diseño de la interfaz y las categorias

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@600&display=swap" rel="stylesheet">
     <title>Colectivos</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="js/jquery-3.6.0.min.js"></script>
@@ -12,41 +15,41 @@
 <body>
     <header>
         <nav class="category_list">
-            <a href="#" class="categoryItem" category="all">Todos</a>
-            <a href="#" class="categoryItem" category="eco">Ambientales</a>
-            <a href="#" class="categoryItem" category="art">Artisticos</a>
-            <a href="#" class="categoryItem" category="tech">Ciencia y tecnologia</a>
-            <a href="#" class="categoryItem" category="teach">Educación</a>
-            <a href="#" class="categoryItem" category="LGBTQ">LGBTQ+</a>
+            <a href="#" class="categoryItem catAll" category="all">Todos</a>
+            <a href="#" class="categoryItem catArt" category="art" >Cultura y arte</a>
+            <a href="#" class="categoryItem catEmprende" category="emprende" >Empredimiento</a>
+            <a href="#" class="categoryItem catSocial" category="social" >Compromiso social</a>
+            <a href="#" class="categoryItem catTech" category="tech" >Ciencia y tecnologia</a>
+            <a href="#" class="categoryItem catEco" category="eco" >Medio ambiente</a>    
         </nav>
     </header>
    <section class="wrap">
         <h1>Conoce a los colectivos</h1>
         <div class="store-wrapper">
             <section class="products_list">
-                <div class="product-item" category="teach">
-                    <img src="images/avilivImg.png" alt="">
-                    <a href="#">Aviliv</a>
+                <div class="product-item" category="social">
+                    <img src="images/avilivImg.png" alt="Aviliv">
+                    <a href="https://www.facebook.com/ColectivoAVILIV">Aviliv</a>
                 </div>
-                <div class="product-item" category="teach">
-                    <img src="images/diplomaciaImg.png" alt="">
-                    <a href="#">DiplomaciaGTO</a>
+                <div class="product-item" category="social">
+                    <img src="images/diplomaciaImg.png" alt="diplomaciaImg">
+                    <a href="https://www.facebook.com/DiplomaciaGTO">DiplomaciaGTO</a>
                 </div>
                 <div class="product-item" category="eco">
-                    <img src="images/ecoliderImg.png" alt="">
-                    <a href="#">Ecolider</a>
+                    <img src="images/ecoliderImg.png" alt="ecoliderImg">
+                    <a href="https://ecolidergto.org/">Ecolider</a>
                 </div>
                 <div class="product-item" category="tech">
-                    <img src="images/particlezImg.png" alt="">
-                    <a href="#">Particlez</a>
+                    <img src="images/particlezImg.png" alt="particlezImg">
+                    <a href="https://www.facebook.com/particlezmx">Particlez</a>
                 </div>
-                <div class="product-item" category="LGBTQ">
-                    <img src="images/queerImg.png" alt="">
-                    <a href="#">Casa Queer</a>
+                <div class="product-item" category="social">
+                    <img src="images/queerImg.png" alt="queerImg">
+                    <a href="https://www.facebook.com/casaqueer">Casa Queer</a>
                 </div>
                 <div class="product-item" category="tech">
-                    <img src="images/techImg.png" alt="">
-                    <a href="#">Tech4GTO</a>
+                    <img src="images/techImg.png" alt="tech4GtoImg">
+                    <a href="https://www.facebook.com/tech4gto">Tech4GTO</a>
                 </div>
             </section>
         </div>
